--- a/SportsSideKick/app/src/main/res/layout-large/popup_your_friends.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_your_friends.xml
@@ -123,7 +123,8 @@
             android:layout_width="@dimen/popup_your_friends_search_container"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
-            android:background="?attr/popupBottomLeftBackground">
+            android:background="?attr/popupBottomLeftBackground"
+            android:layout_below="@+id/bottom_split_line">
 
             <ImageView
                 android:id="@+id/search_icon"
@@ -141,7 +142,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="@dimen/margin_10"
                 android:layout_toEndOf="@id/search_icon"
-                android:background="@color/colorPrimary"
+                android:background="?searchFieldBackgroundRef"
                 android:hint="@string/your_friends_search_hint"
                 android:imeOptions="flagNoExtractUi"
                 android:inputType="text"
