--- a/SportsSideKick/app/src/brugge/res/values/styles.xml
+++ b/SportsSideKick/app/src/brugge/res/values/styles.xml
@@ -8,10 +8,10 @@
         <!--System Colors-->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="colorControlNormal">@color/colorAccentSemiDark</item>
-        <item name="colorControlActivated">@color/colorAccentSemiDark</item>
-        <item name="colorControlHighlight">@color/colorAccentSemiDark</item>
-        <item name="colorPrimarySemiLight">@color/colorPrimarySemiLight</item>
+        <item name="colorControlNormal">@color/colorPrimary</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
+        <item name="colorControlHighlight">@color/colorPrimary</item>
+        <item name="colorPrimarySemiLight">@color/white</item>
 
         <item name="black">@color/black</item>
         <item name="white">@color/white</item>
@@ -131,6 +131,20 @@
         <item name="colorPrimaryVeryLightRef">@color/colorGrayDark</item>
 
         <item name="chatDetailsColorRef">@color/colorGrayDark</item>
+
+        <item name="yourProfileUserNameColorRef">@color/colorGrayDark</item>
+        <item name="yourProfileInfoDetailsColorRef">@color/colorGrayDark</item>
+
+        <item name="editUserInfoBackgroundColorRef">@color/white</item>
+
+        <item name="editUserInfoTextColorColorRef">@color/colorPrimary</item>
+        <item name="editUserInfoUnderlineColorRef">@color/colorPrimarySemiLight</item>
+
+        <item name="stashDescriptionColorRef">@color/colorGrayDark</item>
+
+        <item name="bundlesCaptionColorRef">@color/colorPrimary</item>
+
+        <item name="searchFieldBackgroundRef">@color/transparent</item>
     </style>
 
 
