--- a/SportsSideKick/app/src/main/res/layout-large/popup_your_stash.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_your_stash.xml
@@ -122,11 +122,11 @@
         android:id="@+id/your_stash_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/your_stash_caption"
         android:text="@string/rewards_and_items_received"
-        android:textColor="@color/white"
-        android:textSize="@dimen/font_size_12" />
+        android:textColor="?stashDescriptionColorRef"
+        android:textSize="@dimen/font_size_12"
+        android:layout_below="@+id/your_stash_caption"
+        android:layout_centerHorizontal="true" />
 
 
     <!-- STATEMENTS -->
