--- a/SportsSideKick/app/src/main/res/layout-large/user_stats_item.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/user_stats_item.xml
@@ -13,7 +13,7 @@
         android:ellipsize="end"
         android:gravity="end"
         android:lines="1"
-        android:textColor="@color/white" />
+        android:textColor="?yourProfileInfoDetailsColorRef" />
 
     <TextView
         android:id="@+id/value"
