--- a/SportsSideKick/app/src/main/res/layout/popup_you_following.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_you_following.xml
@@ -111,9 +111,10 @@
         android:id="@+id/bottom_buttons_container"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/popup_language_bottom_buttons_container_height"
-        android:layout_alignParentBottom="true"
         android:background="@drawable/popup_bottom_background"
-        android:clickable="true">
+        android:clickable="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
 
         <View
             android:id="@+id/bottom_split_line"
@@ -141,7 +142,8 @@
             android:layout_width="@dimen/popup_your_friends_search_container"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
-            android:background="?attr/popupBottomLeftBackground">
+            android:background="?attr/popupBottomLeftBackground"
+            android:layout_below="@+id/bottom_split_line">
 
             <ImageView
                 android:id="@+id/search_icon"
@@ -159,7 +161,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="@dimen/margin_10"
                 android:layout_toEndOf="@id/search_icon"
-                android:background="@color/colorPrimary"
+                android:background="?searchFieldBackgroundRef"
                 android:hint="@string/your_friends_search_hint"
                 android:imeOptions="flagNoExtractUi"
                 android:inputType="text"
