--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -129,6 +129,19 @@
 
         <item name="chatDetailsColorRef">@color/white</item>
 
+        <item name="yourProfileUserNameColorRef">@color/white</item>
+        <item name="yourProfileInfoDetailsColorRef">@color/white</item>
+
+        <item name="editUserInfoBackgroundColorRef">@color/colorPrimarySemiLight</item>
+
+        <item name="editUserInfoTextColorColorRef">@color/white</item>
+        <item name="editUserInfoUnderlineColorRef">@color/colorPrimarySemiLight</item>
+
+        <item name="stashDescriptionColorRef">@color/white</item>
+
+        <item name="bundlesCaptionColorRef">@color/white</item>
+
+        <item name="searchFieldBackgroundRef">@color/colorPrimary</item>
     </style>
 
 
