--- a/SportsSideKick/app/src/main/res/layout-large/popup_add_friend.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_add_friend.xml
@@ -16,8 +16,9 @@
         android:id="@+id/top_buttons_container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
+        android:orientation="horizontal"
         android:layout_alignParentTop="true"
-        android:orientation="horizontal">
+        android:layout_toEndOf="@+id/no_results">
 
         <View
             android:id="@+id/top_vertical_spliter"
@@ -29,10 +30,10 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/standard_button_height"
             android:layout_toStartOf="@+id/top_vertical_spliter"
-            android:background="?colorPrimarySemiLight"
+            android:background="?addFriendButtonBackgroundColorRef"
             android:gravity="center"
             android:text="@string/add_friend"
-            android:textColor="?colorAccent" />
+            android:textColor="?addFriendButtonTextColorRef" />
 
         <TextView
             android:id="@+id/invite_friend_button"
@@ -42,7 +43,7 @@
             android:background="@color/colorPrimaryMediumLight"
             android:gravity="center"
             android:text="@string/invite_friend"
-            android:textColor="?white_semitransparent" />
+            android:textColor="?addFriendButtonInviteTextColorRef" />
 
         <View
             android:layout_width="match_parent"
@@ -91,7 +92,7 @@
             android:layout_toStartOf="@id/add_friend_name"
             android:maxLines="2"
             android:text="@string/add_friend_hint"
-            android:textColor="@color/colorGraySemiLight" />
+            android:textColor="?addFriendInfoColorRef" />
     </RelativeLayout>
 
     <TextView
