--- a/SportsSideKick/app/src/main/res/layout-large/popup_edit_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_edit_chat.xml
@@ -66,19 +66,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/standard_button_height"
                 android:layout_toStartOf="@+id/edit_top_vertical_spliter"
+                android:background="?chatSlideButtonBackgroundColorRef"
                 android:gravity="center"
                 android:text="@string/edit_chat"
-                android:textColor="?colorAccent" />
+                android:textColor="?chatSlideButtonTextColorRef" />
 
             <TextView
                 android:id="@+id/join_a_chat"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/standard_button_height"
                 android:layout_toEndOf="@+id/edit_top_vertical_spliter"
-                android:background="@color/colorPrimaryVeryDark"
+                android:background="?chatSlideSecondButtonBackgroundColorRef"
                 android:gravity="center"
                 android:text="@string/join_chat"
-                android:textColor="?white_semitransparent" />
+                android:textColor="?chatSlideSecondButtonTextColorRef" />
 
             <View
                 android:layout_width="match_parent"
@@ -127,14 +128,14 @@
                 android:layout_height="@dimen/height_60"
                 android:layout_below="@+id/edit_top_vertical_spliter"
                 android:layout_toEndOf="@id/chat_image_view"
-                android:background="@color/colorPrimary"
+                android:background="?chatJoinSearchBackgroundColorRef"
                 android:gravity="start|center_vertical"
                 android:hint="@string/group_chat_name"
                 android:imeOptions="flagNoExtractUi"
                 android:maxLines="1"
                 android:padding="@dimen/margin_20"
                 android:textColor="@color/white"
-                android:textColorHint="?white_semitransparent"
+                android:textColorHint="?chatJoinSearchTextColorRef"
                 android:textSize="@dimen/font_size_14" />
 
             <ImageButton
@@ -222,7 +223,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/confirm_button"
-            android:background="@color/colorPrimary">
+            android:background="?chatJoinBackgroundColorRef">
 
             <TextView
                 android:id="@+id/friends_in_chat_headline"
@@ -231,7 +232,7 @@
                 android:layout_centerHorizontal="true"
                 android:padding="@dimen/padding_8"
                 android:text="@string/friends_in_chat"
-                android:textColor="@color/white" />
+                android:textColor="?chatJoinChatsHeadlineColorRef" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/members_recycler_view"
@@ -269,7 +270,7 @@
             android:scaleType="centerInside"
             android:text="@string/save"
             android:textAllCaps="false"
-            android:textColor="@color/colorPrimary" />
+            android:textColor="?chatCreateButtonTextColorRef" />
 
         <base.app.util.ui.AutofitRecyclerView
             android:id="@+id/friends_recycler_view"
