--- a/SportsSideKick/app/src/main/res/layout-large/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_wall.xml
@@ -232,7 +232,7 @@
             android:layout_height="@dimen/height_60"
             android:layout_alignParentStart="true"
             android:clickable="true"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <LinearLayout
                 android:layout_width="match_parent"
