--- a/SportsSideKick/app/src/brugge/res/layout/row_rumours.xml
+++ b/SportsSideKick/app/src/brugge/res/layout/row_rumours.xml
@@ -4,6 +4,26 @@
     android:layout_height="wrap_content">
 
     <RelativeLayout
+        android:id="@+id/row_rumours_background_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/row_rumours_foreground_container"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/row_rumours_foreground_container"
+        android:background="@color/colorAccent">
+
+        <android.support.v7.widget.AppCompatImageButton
+            android:id="@+id/row_rumours_swipe_share"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:padding="@dimen/padding_16"
+            android:src="@drawable/ic_share"
+            android:tint="@color/colorPrimary" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
         android:id="@+id/row_rumours_foreground_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,7 +62,7 @@
     </RelativeLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_1"
+        android:layout_height="@dimen/margin_1"
         android:layout_below="@+id/row_rumours_foreground_container"
         android:background="?rumourSmallSeparatorColor" />
 </RelativeLayout>
