--- a/SportsSideKick/app/src/main/res/layout/row_rumours_image.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_rumours_image.xml
@@ -2,47 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_negative_20">
-
-
-    <RelativeLayout
-        android:id="@+id/row_rumours_background_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/row_rumours_foreground_container"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/row_rumours_foreground_container"
-        android:background="@color/colorAccent"
-        android:visibility="gone">
-
-        <android.support.v7.widget.AppCompatImageButton
-            android:id="@+id/row_rumours_swipe_share"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@null"
-            android:padding="@dimen/padding_16"
-            android:src="@drawable/ic_share"
-            android:tint="@color/colorPrimary"
-            android:visibility="gone"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/row_rumours_foreground_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryMediumLight"
-        android:focusable="true"
-        android:orientation="vertical"
-        android:visibility="gone"/>
+    android:layout_marginBottom="@dimen/padding_10">
 
     <ImageView
         android:id="@+id/fragment_rumors_top_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:background="@drawable/image_rumours_background"
-        android:scaleType="centerCrop" />
+        android:src="@drawable/image_rumours_background"
+        android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/fragment_rumors_top_headline"
@@ -51,8 +19,7 @@
         android:layout_centerInParent="true"
         android:textAllCaps="true"
         android:text="@string/rumours_caption"
+        android:textStyle="bold"
         android:textColor="@color/white"
         android:textSize="@dimen/font_size_28" />
-
-
 </RelativeLayout>
