--- a/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
@@ -16,7 +16,7 @@
             android:layout_height="match_parent"
             android:layout_alignBottom="@+id/spaner"
             android:layout_alignParentTop="true"
-            android:background="@drawable/rumour_headerz"
+            android:background="@drawable/rumour_headers"
             app:backgroundTint="@color/colorAccentLight"
             app:angle="90"> <!-- Specify rotate angle here -->
 
